--- a/point-node-java-runtime-core/src/main/resources/application.properties
+++ b/point-node-java-runtime-core/src/main/resources/application.properties
@@ -3,6 +3,10 @@
 spring.messages.basename=static/i18n/messages
 
 ################################################################################
+## mvc
+spring.mvc.static-path-pattern=/static/**
+
+################################################################################
 ## jdbc
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:point.db
