web 和 api 接口使用不同的认证结果返回

--- a/point-node-java-runtime-core/src/main/resources/application.properties
+++ b/point-node-java-runtime-core/src/main/resources/application.properties
@@ -28,3 +28,12 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 #### beetl
 beetl.enabled=true
 beetl.suffix=html
+
+################################################################################
+#### log
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.boot.autoconfigure=DEBUG
+
+
